# WizardMerge

./: .gitmodules  README.md
evaluation/: coflict_commit_pairs
evaluation/compilation_config/: mozconfig
evaluation/data/: manual_time.csv
evaluation/data/CR-VDCBs/0141a4da03b4f370abc7c8a21d634ab0154cbe2f_be68b3c9abd51c05e271d08f0251bf7b4932c0b4/: gt
evaluation/data/CR-VDCBs/01577ab39c4def86804c2626207e7f35f2cda9bf_001e7b50f2e1a65a6469823eb17f5b4a8edfdfca/: gt
evaluation/data/CR-VDCBs/035fdc38c1f6ddce3544d8a489548e6cc4de508a_05d3ef8bba77c1b5f98d941d8b2d4aeab8118ef1/: gt
evaluation/data/CR-VDCBs/038b2ae254b6c495498bd8cf4c57f4e320a4f91b_8f1cbc8dea9ce760f08472c9f2bbd144aeb85c74/: gt
evaluation/data/CR-VDCBs/05e39dbc788c31f3c50feafe1dfdddaf3bda21bc_c7d556c9bdcbd8be1ed0b56698f9db3c42b9246b/: gt
evaluation/scripts/: compile_all_targets.py  find_merge_conflict_tuple.py  statical_test.py
src/Elimination/: CMakeLists.txt
src/Elimination/ResourceDependencyAnalysis/: CMakeLists.txt  DependencyNode.h  DiffTextSplit.cpp  DiffTextSplit.h  GlobalVars.h  GraphShrinking.cpp  GraphShrinking.h  ModifiedFileInVariant.cpp  ProjectRepresentation.h  Utils.cpp  Utils.h  main.cpp
src/Elimination/ResourceDependencyAnalysis/GraphGeneration/: DependencyGraph.h  FunctionNode.cpp  FunctionNode.h  GeneralNode.h  GlobalVariableNode.cpp  GlobalVariableNode.h  ModuleSummary.cpp  ModuleSummary.h  Project.h  ThreadPool.h  TypeNode.cpp  TypeNode.h  Utils.cpp  Utils.h
src/MergeResultExtractor/: GetPCB.py  MergeResultExtractor.py  get_diff_lines.sh
src/scripts/: git_wrapper.py
(+347 files in other folders)
